# jimaku-scripter

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: ai_manual.md  project.md
src/: aligner.py  cleaner.py  config.py  forcedaligner.py  formatter.py  pipeline.py  processor.py  proofreader.py  refiner.py  srtwriter.py  transcriber.py  utils.py
